# myshell

./: CMakeLists.txt  README.md
cmake/: Config.cmake
config/: config.h
errors_handling/: error_functions.h
external_commands/mycat/: CMakeLists.txt
external_commands/mycat/inc/operations/: file_io.hpp
external_commands/mycat/src/: file_io.cpp
shell_commands/: commands.h
src/: main.cpp  parsing.cpp  parsing.h
src/config/: config.cpp
src/errors_handling/: error_functions.cpp
src/shell_commands/: commands.cpp
